local and remote sonar configuration
added sonar profiles to reactor build

added coverage call

added coverage call